<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rasmus.teamfinder.MyProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="292dp"
                android:layout_height="199dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/annie"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                >

                <EditText
                    android:id="@+id/editNickName"
                    android:maxWidth="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/nickName"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/nickName"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:text="@string/nickname"
                    android:textSize="24sp"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:maxLength="13"
                    />

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="wrap_content"
                    android:maxWidth="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nickname"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <ImageView
                    android:id="@+id/editNickNameIcon"
                    android:layout_width="18dp"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/nickName"
                    android:layout_toRightOf="@+id/nickName"
                    android:gravity="end"
                    android:src="@drawable/edit"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/nickName" />

                <ImageView
                    android:id="@+id/saveNickNameIcon"
                    android:layout_width="16dp"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/editNickName"
                    android:layout_toRightOf="@+id/editNickName"
                    android:gravity="end"
                    android:src="@drawable/checkmark"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/editNickName" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/title_discovery_settings"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nickName" />

            <TextView
                android:id="@+id/gameLabel"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_dropdown_game"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gameDropdown"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Spinner
                android:id="@+id/gameDropdown"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rankLabel" />

            <TextView
                android:id="@+id/positionLabel"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_dropdown_position"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rankDropdown"
                app:layout_constraintTop_toBottomOf="@+id/gameDropdown" />

            <Spinner
                android:id="@+id/positionDropdown"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameLabel" />

            <TextView
                android:id="@+id/rankLabel"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_dropdown_rank"
                app:layout_constraintStart_toStartOf="@+id/positionDropdown"
                app:layout_constraintTop_toBottomOf="@+id/rankDropdown" />

            <Spinner
                android:id="@+id/rankDropdown"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/positionLabel" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>
